--- a/homePage.html
+++ b/homePage.html
@@ -6,7 +6,7 @@
      href="images/MeIcon.png" />
 </head>
 	<div class="Header">
-		<img class="iconImg" src="images/MeIcon.png">
+		<img class="iconImg" src="images/Logo.png">
 		<a id="aboutLink"class="pageLink" style="color: #FFFF2E;text-decoration: underline;"href="index.html">About Us</a>
 		<a id="portLink"class="pageLink" href="portfolio.html">Members</a>
 		<a id="resLink"class="pageLink" href="resume.html">Contact</a>
