--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<img class="iconImg" src="images/Logo.png">
 		<br>
 		<a id="aboutLink"class="pageLink" style="color: blue;text-decoration: underline;"href="index.html">About</a>
-		<a id="portLink"class="pageLink" href="index.html">Events</a>
-		<a id="portLink"class="pageLink" href="index.html">Members</a>
-		<a id="resLink"class="pageLink" href="index.html">Contact</a>
+		<a id="portLink"class="pageLink" href="events.html">Events</a>
+		<a id="portLink"class="pageLink" href="members.html">Members</a>
+		<a id="resLink"class="pageLink" href="contact.html">Contact</a>
 	</div>
 	<div id="containerHome">
 		<img src="images/nameWhite.png" style="left:0;margin-left:-2%;margin-top:70px;position:absolute;width:50%;height:35%;">
