--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 		<img class="iconImg" src="images/Logo.png">
 		<br>
 		<a id="aboutLink"class="pageLink" style="color: blue;text-decoration: underline;"href="index.html">About</a>
-		<a id="portLink"class="pageLink" href="index.html">Events</a>
-		<a id="portLink"class="pageLink" href="index.html">Members</a>
-		<a id="resLink"class="pageLink" href="index.html">Contact</a>
+		<a id="portLink"class="pageLink" href="events.html">Events</a>
+		<a id="portLink"class="pageLink" href="members.html">Members</a>
+		<a id="resLink"class="pageLink" href="contact.html">Contact</a>
 	</div>
 	<div id="containerHome">
-		<img src="images/nameWhite.png" style="left:0;margin-left:-2%;margin-top:70px;position:absolute;width:50%;height:35%;">
 		<div id="containerNew"style="background-color:black; width:100%;height:100%;padding-top:2%;">
-			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">	<!--<img id="me" src="images/meIcon2.png">--><p id="aboutMe" alight="right"> &nbsp; &nbsp; &nbsp;Engineers for Gainesville is a local community service and volunteer organization for engineering students in Gainesville Florida. Our mission is to give back to the local Gainesville community through volunteer efforts such as food drives, clothing drives, and tutoring at local schools. The members are engineering students from various disciplines who have decided to take a step back from their technical pursuits to serve their local community. If you would like to join our organisation, please go to our contact page and send us an email.<br><br><br><br></div>
+			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">	<!--<img id="me" src="images/meIcon2.png">--><p id="aboutMe" alight="right"> &nbsp; &nbsp; &nbsp;Engineers for Gainesville is a local community service and volunteer organization for engineering students in Gainesville, Florida. Our mission is to give back to the local Gainesville community through volunteer efforts such as food drives, clothing drives, and tutoring at local schools. With the members being engineering students from various disciplines, this student organization intends to connect these service minded engineers and provide an opportunity for them to serve their community through volunteer work separate from their studies and other technical pursuits. If you would like to join our organization, please go to our contact page and send us an email.<br><br><br><br></div>
 		</div>
 	</div>
 </html>
