--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
 	</div>
 	<div id="containerHome">
 		<img src="images/nameWhite.png" style="left:0;margin-left:-2%;margin-top:70px;position:absolute;width:50%;height:35%;">
-		<div style="background-color:black; width:100%;height:100%;padding-top:2%;">
-			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">	<!--<img id="me" src="images/meIcon2.png">--><p id="aboutMe" alight="right"> &nbsp; &nbsp; &nbsp;something about the club asdlkfja;lsdkjfa;lsdkfja;lsdkfj;asdlkfj;adslkfjkdja;sdkfja;sdkfja ;dskja;sdfjkadsflkja;dsklfjkjka;sdljf <</div>
+		<div id="containerNew"style="background-color:black; width:100%;height:100%;padding-top:2%;">
+			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">	<!--<img id="me" src="images/meIcon2.png">--><p id="aboutMe" alight="right"> &nbsp; &nbsp; &nbsp;If you wish to contact us, please email our President at the listed email address below. We welcome engineering students who are interested in joining to please reach out to us. Also, any community service organizations that would like to partner with in planning an event are welcome.<br> Contact Information:<br> President: Brian Kinter <br>Email: brkinter123@ufl.edu <br><br><br><br></div>
 		</div>
 	</div>
 </html>
