--- a/members.html
+++ b/members.html
@@ -14,9 +14,9 @@
 		<a id="resLink"class="pageLink" href="contact.html">Contact</a>
 	</div>
 	<div id="containerHome">
-		<img src="images/nameWhite.png" style="left:0;margin-left:-2%;margin-top:70px;position:absolute;width:50%;height:35%;">
-		<div style="background-color:black; width:100%;height:100%;padding-top:2%;">
-			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">	<!--<img id="me" src="images/meIcon2.png">--><p id="aboutMe" alight="right"> &nbsp; &nbsp; &nbsp;something about the club asdlkfja;lsdkjfa;lsdkfja;lsdkfj;asdlkfj;adslkfjkdja;sdkfja;sdkfja ;dskja;sdfjkadsflkja;dsklfjkjka;sdljfA</div>
+		<img src="images/TEP_Headshot-Brian_Kinter.jpg" style="left:0;margin-left:12%;margin-top:270px;position:absolute;width:15%;height:30%;">
+		<div id="containerNew"style="background-color:black; width:100%;height:100%;padding-top:2%;">
+			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">	<!--<img id="me" src="images/meIcon2.png">--><p id="aboutMe" alight="right"> &nbsp; &nbsp; &nbsp;Brian Kinter is the founder and President of Engineers for Gainesville. Currently, he is pursuing a M.S. in Mechanical Engineering at the University of Florida, and he plans to graduate in May 2017. Some of his previous experience include interning at Pratt & Whitney as a mechanical design engineer working on jet engine fan blades, interning at Tyco Fire Protection Products as a mechanical design engineer developing a new expansion joint, and as a student member of Gator Motorsports building a formula race car for an international FSAE competition.<br><br><br><br></div>
 		</div>
 	</div>
 </html>
