--- a/events.html
+++ b/events.html
@@ -14,9 +14,10 @@
 		<a id="resLink"class="pageLink" href="contact.html">Contact</a>
 	</div>
 	<div id="containerHome">
-		<img src="images/Christmas_Food_Drive_2016.png" style="left:0;margin-left:12%;margin-top:270px;position:absolute;width:15%;height:30%;">
 		<div id="containerNew"style="background-color:black; width:100%;height:100%;padding-top:2%;">
-			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">	<!--<img id="me" src="images/meIcon2.png">--><p id="aboutMe" alight="right"> &nbsp; &nbsp; &nbsp;The first event that the new student organization did was the 2016 Christmas food drive. Thanks to the generous contributions from a local Gainesville neighborhood, Engineers for Gainesville was able to donate canned and other nonperishable food to the St. Francis House. Just in time for the holiday season, the St. Francis house was able to use this food to feed those in need.<br><br><br><br></div>
+			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">
+			<img src="images/Christmas_Food_Drive_2016.png" style="left:0;margin-left:2%;margin-top:50px;position:absolute;width:25%;height:50%;">
+			<p id="eventsandmembers" alight="right"> &nbsp; &nbsp; &nbsp;The first event that the new student organization did was the 2016 Christmas food drive. Thanks to the generous contributions from a local Gainesville neighborhood, Engineers for Gainesville was able to donate canned and other nonperishable food to the St. Francis House. Just in time for the holiday season, the St. Francis house was able to use this food to feed those in need.<br><br><br><br></div>
 			</div>
 		</div>
 	</div>
