Added Puterman's bio and "Under Constructions"

--- a/events.html
+++ b/events.html
@@ -18,6 +18,7 @@
 			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">
 			<img src="images/Christmas_Food_Drive_2016.png" style="left:0;margin-left:2%;margin-top:50px;position:absolute;width:25%;height:50%;">
 			<p id="eventsandmembers" alight="right"> &nbsp; &nbsp; &nbsp;The first event that the new student organization did was the 2016 Christmas food drive. Thanks to the generous contributions from a local Gainesville neighborhood, Engineers for Gainesville was able to donate canned and other nonperishable food to the St. Francis House. Just in time for the holiday season, the St. Francis house was able to use this food to feed those in need.<br><br><br><br></div>
+			<p id="eventsandmembers" alight="right"> &nbsp; &nbsp; &nbsp;Website under construction, please wait for descriptions of some of our other events including a clothing drive, tutoring program, and upcoming Bed Race.<br><br><br><br></div>
 			</div>
 		</div>
 	</div>
