--- a/members.html
+++ b/members.html
@@ -19,5 +19,11 @@
 			<img src="images/TEP_Headshot-Brian_Kinter.jpg" style="left:0;margin-left:2%;margin-top:50px;position:absolute;width:25%;height:50%;">
 			<p id="eventsandmembers" alight="right"> &nbsp; &nbsp; &nbsp;Brian Kinter is the founder and President of Engineers for Gainesville. Currently, he is pursuing a M.S. in Mechanical Engineering at the University of Florida, and he plans to graduate in May 2017. Some of his previous experience include interning at Pratt & Whitney as a mechanical design engineer working on jet engine fan blades, interning at Tyco Fire Protection Products as a mechanical design engineer developing a new expansion joint, and as a student member of Gator Motorsports building a formula race car for an international FSAE competition.<br><br><br><br></p></div>
 		</div>
+		<img src="images/Headshot-Putterman.png" style="left:0;margin-left:2%;margin-top:50px;position:absolute;width:25%;height:50%;">
+			<p id="eventsandmembers" alight="right"> &nbsp; &nbsp; &nbsp;Joel Puterman is the Vice-President and a senior studying Industrial Engineering with a minor in Actuarial Sciences. Previously worked with Perry Ellis International as a Process Improvement Intern. <br><br><br><br></p></div>
+		</div>
+
+			<p id="eventsandmembers" alight="right"> &nbsp; &nbsp; &nbsp;Website under construction. Please wait to see some of our other members, Adam Ruiz, Spencer Shapiro, Ben Drescher, and a Group photo of the entire student organization. <br><br><br><br></p></div>
+		</div>
 	</div>
 </html>
