Clothing Drive update
Added clothing drive event, added Shapiro bio, added ditocco bio, added
scrolling of entries with overflow, removed white from logo, and deleted
unneccesary code

--- a/members.html
+++ b/members.html
@@ -1,4 +1,14 @@
 <html>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-92783213-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <head>  
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
 	<link href="style.css" rel="stylesheet"/>
@@ -8,22 +18,47 @@
 	<div class="Header">
 		<img class="iconImg" src="images/Logo.png">
 		<br>
-		<a id="aboutLink"class="pageLink" style="color: rgb(0,100,255);text-decoration: underline;"href="index.html">About</a>
+		<a id="aboutLink"class="pageLink" href="index.html">About</a>
 		<a id="portLink"class="pageLink" href="events.html">Events</a>
-		<a id="portLink"class="pageLink" href="members.html">Members</a>
+		<a id="portLink"class="pageLink" style="color: rgb(252,53,0);href="members.html">Members</a>
 		<a id="resLink"class="pageLink" href="contact.html">Contact</a>
 	</div>
-	<div id="containerHome">
-		<div id="containerNew"style="background-color:black; width:100%;height:100%;padding-top:2%;">
-			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">
-			<img src="images/TEP_Headshot-Brian_Kinter.jpg" style="left:0;margin-left:2%;margin-top:50px;position:absolute;width:25%;height:50%;">
-			<p id="eventsandmembers" alight="right"> &nbsp; &nbsp; &nbsp;Brian Kinter is the founder and President of Engineers for Gainesville. Currently, he is pursuing a M.S. in Mechanical Engineering at the University of Florida, and he plans to graduate in May 2017. Some of his previous experience include interning at Pratt & Whitney as a mechanical design engineer working on jet engine fan blades, interning at Tyco Fire Protection Products as a mechanical design engineer developing a new expansion joint, and as a student member of Gator Motorsports building a formula race car for an international FSAE competition.<br><br><br><br></p></div>
+		<div class="container">
+			<div class="body" style="margin-top:200px;margin-left: 10%;width:80%;padding-top:3%;">
+				<div class ="newEntry">
+					<div class="photoDiv">
+						<img class="photo" src="images/Headshot-Kinter.png">
+					</div>
+					<div class="eventsandmembers"> &nbsp; &nbsp; &nbsp;Brian Kinter is the founder and President of Engineers for Gainesville. Currently, he is pursuing a M.S. in Mechanical Engineering at the University of Florida, and he plans to graduate in May 2017. Some of his previous experience include interning at Pratt & Whitney as a mechanical design engineer working on jet engine fan blades, interning at Tyco Fire Protection Products as a mechanical design engineer developing a new expansion joint, and as a student member of Gator Motorsports building a formula race car for an international FSAE competition.<br><br><br><br></div>
+				</div>
+				<div class ="newEntry">
+					<div class="photoDiv">
+						<img class="photo" src="images/Headshot-Putterman.png">
+					</div>
+					<div class="eventsandmembers"> &nbsp; &nbsp; &nbsp;<br><br><br>Joel Puterman is the Vice-President and a senior studying Industrial Engineering with a minor in Actuarial Sciences. Previously worked with Perry Ellis International as a Process Improvement Intern.<br><br><br><br></div>
+					<br><br><br><br>
+				</div>
+				<div class ="newEntry">
+					<div class="photoDiv">
+						<img class="photo" src="images/Headshot-Ruiz.png">
+					</div>
+					<div class="eventsandmembers"> &nbsp; &nbsp; &nbsp;<br>Adam Ruiz is the Treasurer of Engineers for Gainesville. He is a senior in pursuit of degrees in Aerospace and Mechanical Engineering, and is graduating in May 2018. Adam has gained experience in his field from the HyperGatorLoop and CHOMPTT (CubeSat) design teams, as well as being a Teaching Assistant for Mechanics of Materials Lab at UF. Additionally, he has volunteered as a tutor at the Broward Teaching Center and as a peer advisor for his college.<br><br><br><br></div>
+					<br><br><br><br>
+				</div>
+				<div class ="newEntry">
+					<div class="photoDiv">
+						<img class="photo" src="images/Headshot-Shapiro.png">
+					</div>
+					<div class="eventsandmembers"> &nbsp; &nbsp; &nbsp;<br>Spencer Shapiro is the current Director of Operations for Engineers for Gainesville. He is a junior Civil Engineering major, and expects to graduate in May 2019. He has been employed by Vector Marketing and Jesan Development, a sales corporation and real estate company, respectively. Spencer has been involved on campus through Student Government Productions and the Tau Epsilon Phi executive board.<br><br><br><br></div>
+					<br><br><br><br>
+				</div>
+				<div class ="newEntry">
+					<div class="photoDiv">
+						<img class="photo" src="images/Headshot-Ditocco.png">
+					</div>
+					<div class="eventsandmembers"> &nbsp; &nbsp; &nbsp;<br>Anthony Ditocco is the current web developer for Engineers for Gainesville. He is a senior Computer Science Engineering major, and expects to graduate in May 2017. He's interested in software engineering web and mobile development. <br><br><br><br></div>
+					<br><br><br><br>
+				</div>
+			</div>
 		</div>
-		<img src="images/Headshot-Putterman.png" style="left:0;margin-left:2%;margin-top:50px;position:absolute;width:25%;height:50%;">
-			<p id="eventsandmembers" alight="right"> &nbsp; &nbsp; &nbsp;Joel Puterman is the Vice-President and a senior studying Industrial Engineering with a minor in Actuarial Sciences. Previously worked with Perry Ellis International as a Process Improvement Intern. <br><br><br><br></p></div>
-		</div>
-
-			<p id="eventsandmembers" alight="right"> &nbsp; &nbsp; &nbsp;Website under construction. Please wait to see some of our other members, Adam Ruiz, Spencer Shapiro, Ben Drescher, and a Group photo of the entire student organization. <br><br><br><br></p></div>
-		</div>
-	</div>
 </html>
