--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,14 @@
 <html>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-92783213-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <head>  
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
 	<link href="style.css" rel="stylesheet"/>
@@ -8,14 +18,14 @@
 	<div class="Header">
 		<img class="iconImg" src="images/Logo.png">
 		<br>
-		<a id="aboutLink"class="pageLink" style="color: rgb(0,100,255);text-decoration: underline;"href="index.html">About</a>
+		<a id="aboutLink"class="pageLink" href="index.html">About</a>
 		<a id="portLink"class="pageLink" href="events.html">Events</a>
 		<a id="portLink"class="pageLink" href="members.html">Members</a>
-		<a id="resLink"class="pageLink" href="contact.html">Contact</a>
+		<a id="resLink"class="pageLink" style="color: rgb(252,53,0);" href="contact.html">Contact</a>
 	</div>
-	<div id="containerHome">
-			<div id="containerNew"style="background-color:black; width:100%;height:100%;padding-top:2%;">
-			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">	<!--<img id="me" src="images/meIcon2.png">--><p id="aboutandcontact" alight="right"> &nbsp; &nbsp; &nbsp;If you wish to contact us, please email our President at the listed email address below. We welcome engineering students who are interested in joining to please reach out to us. Also, any community service organizations that would like to partner with in planning an event are welcome.<br><br>Contact Information<br>President: Brian Kinter <br>Email: brkinter123@ufl.edu <br><br><br><br></div>
-		</div>
+
+	<div class="container">
+		<div class="body" style="margin-top:200px;margin-left: 10%;width:80%;padding-top:3%;">	<!--<img id="me" src="images/meIcon2.png">--><p id="aboutandcontact" alight="right"> &nbsp; &nbsp; &nbsp;If you wish to contact us, please email our President at the listed email address below. We welcome engineering students who are interested in joining to please reach out to us. Also, any community service organizations that would like to partner with in planning an event are welcome.<br><br>Contact Information<br>President: Brian Kinter <br>Email: brkinter123@ufl.edu <br><br><br><br></div>
 	</div>
+	
 </html>
