--- a/events.html
+++ b/events.html
@@ -1,4 +1,14 @@
 <html>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-92783213-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <head>  
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
 	<link href="style.css" rel="stylesheet"/>
@@ -8,18 +18,26 @@
 	<div class="Header">
 		<img class="iconImg" src="images/Logo.png">
 		<br>
-		<a id="aboutLink"class="pageLink" style="color: rgb(0,100,255);text-decoration: underline;"href="index.html">About</a>
-		<a id="portLink"class="pageLink" href="events.html">Events</a>
+		<a id="aboutLink"class="pageLink" href="index.html">About</a>
+		<a id="portLink"class="pageLink" style="color: rgb(252,53,0);text-decoration: underline; href="events.html">Events</a>
 		<a id="portLink"class="pageLink" href="members.html">Members</a>
 		<a id="resLink"class="pageLink" href="contact.html">Contact</a>
 	</div>
-	<div id="containerHome">
-		<div id="containerNew"style="background-color:black; width:100%;height:100%;padding-top:2%;">
-			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">
-			<img src="images/Christmas_Food_Drive_2016.png" style="left:0;margin-left:2%;margin-top:50px;position:absolute;width:25%;height:50%;">
-			<p id="eventsandmembers" alight="right"> &nbsp; &nbsp; &nbsp;The first event that the new student organization did was the 2016 Christmas food drive. Thanks to the generous contributions from a local Gainesville neighborhood, Engineers for Gainesville was able to donate canned and other nonperishable food to the St. Francis House. Just in time for the holiday season, the St. Francis house was able to use this food to feed those in need.<br><br><br><br></div>
-			<p id="eventsandmembers" alight="right"> &nbsp; &nbsp; &nbsp;Website under construction, please wait for descriptions of some of our other events including a clothing drive, tutoring program, and upcoming Bed Race.<br><br><br><br></div>
-			</div>
+		<div class="container">
+			<div class="body" style="margin-top:200px;margin-left: 10%;width:80%;padding-top:3%;">
+				<div class ="newEntry">
+					<div class="photoDiv">
+						<img class="photo" src="images/Clothing_drive.png">
+					</div>
+					<div class="eventsandmembers"> &nbsp; &nbsp; &nbsp;<br><br>Engineers for Gainesville held a clothing drive benefiting the Haven Hospice Attic, a local gainesville non-profit. With collection boxes around campus like the one in the picture to the left, Engineers for Gainesville was able to donate clothes to the Haven Hospice Resale Store. This helps provide affordable clothes for those in need in Gainesville while also supporting the Haven Hospice patients and families with the proceeds.<br><br><br><br></div>
+				</div>
+				<div class ="newEntry">
+					<div class="photoDiv">
+						<img class="photo" src="images/Christmas_Food_Drive_2016.png">
+					</div>
+					<div class="eventsandmembers"> &nbsp; &nbsp; &nbsp;<br><br>The first event that the new student organization did was the 2016 Christmas food drive. Thanks to the generous contributions from a local Gainesville neighborhood, Engineers for Gainesville was able to donate canned and other nonperishable food to the St. Francis House. Just in time for the holiday season, the St. Francis house was able to use this food to feed those in need.<br><br><br><br></div>
+					<br><br><br><br>
+				</div>
+			</div><br><br><br>
 		</div>
-	</div>
 </html>
