--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <html>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-92783213-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <head>  
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
 	<link href="style.css" rel="stylesheet"/>
@@ -8,14 +18,13 @@
 	<div class="Header">
 		<img class="iconImg" src="images/Logo.png">
 		<br>
-		<a id="aboutLink"class="pageLink" style="color: blue;text-decoration: underline;"href="index.html">About</a>
+		<a id="aboutLink"class="pageLink" style="color: rgb(252,53,0);"href="index.html">About</a>
 		<a id="portLink"class="pageLink" href="events.html">Events</a>
 		<a id="portLink"class="pageLink" href="members.html">Members</a>
 		<a id="resLink"class="pageLink" href="contact.html">Contact</a>
 	</div>
-	<div id="containerHome">
-		<div id="containerNew"style="background-color:black; width:100%;height:100%;padding-top:2%;">
-			<div class="body" style="margin-top:150px;margin-left: 10%;width:80%;padding-top:3%;">	<!--<img id="me" src="images/meIcon2.png">--><p id="aboutandcontact" alight="right"> &nbsp; &nbsp; &nbsp;Engineers for Gainesville is a local community service and volunteer organization for engineering students in Gainesville, Florida. Our mission is to give back to the local Gainesville community through volunteer efforts such as food drives, clothing drives, and tutoring at local schools. With the members being engineering students from various disciplines, this student organization intends to connect these service minded engineers and provide an opportunity for them to serve their community through volunteer work separate from their studies and other technical pursuits. If you would like to join our organization, please go to our contact page and send us an email.<br><br><br><br></div>
+		<div class="container">
+			<div class="body" style="margin-top:200px;margin-left: 10%;width:80%;padding-top:3%;">	
+			<p id="aboutandcontact" alight="right"> &nbsp; &nbsp; &nbsp;Engineers for Gainesville is a local community service and volunteer organization for engineering students in Gainesville, Florida. Our mission is to give back to the local Gainesville community through volunteer efforts such as food drives, clothing drives, and tutoring at local schools. With the members being engineering students from various disciplines, this student organization intends to connect these service minded engineers and provide an opportunity for them to serve their community through volunteer work separate from their studies and other technical pursuits. If you would like to join our organization, please go to our contact page and send us an email.<br><br><br><br></div>
 		</div>
-	</div>
 </html>
